Fix buttons alignment

--- a/src/components/DelegationsInfo/_style.scss
+++ b/src/components/DelegationsInfo/_style.scss
@@ -1,6 +1,7 @@
 .delegations-info {
     .add-delegation-cont {
         text-align: center;
-        margin-top: 24px;
+        margin-top: 32px;
+        margin-bottom: 16px;
     }
 }
